Intermittent /webrtc/RTCPeerConnection-removeTrack.https.html | application crashed [@ libxul.so + 0xd1a437] (leaking the world)
Categories
(Core :: WebRTC, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | --- | fixed |
| firefox67 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bwc)
References
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
Filed by: opoprus [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=223719751&repo=mozilla-central
[task 2019-01-24T12:35:33.868Z] 12:35:33 INFO - TEST-START | /webrtc/RTCPeerConnection-setDescription-transceiver.html
[task 2019-01-24T12:35:33.379Z] 12:35:33 INFO - PROCESS-CRASH | /webrtc/RTCPeerConnection-removeTrack.https.html | application crashed [@ libxul.so + 0xd1a437]
[task 2019-01-24T12:35:33.380Z] 12:35:33 INFO - Crash dump filename: /tmp/tmpHjwaxE.mozrunner/minidumps/7cbc33a0-1459-6d00-2ce2-450f4759f833.dmp
[task 2019-01-24T12:35:33.382Z] 12:35:33 INFO - Operating system: Linux
[task 2019-01-24T12:35:33.383Z] 12:35:33 INFO - 0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2019-01-24T12:35:33.383Z] 12:35:33 INFO - CPU: amd64
[task 2019-01-24T12:35:33.383Z] 12:35:33 INFO - family 6 model 62 stepping 4
[task 2019-01-24T12:35:33.383Z] 12:35:33 INFO - 4 CPUs
[task 2019-01-24T12:35:33.383Z] 12:35:33 INFO -
[task 2019-01-24T12:35:33.384Z] 12:35:33 INFO - GPU: UNKNOWN
[task 2019-01-24T12:35:33.385Z] 12:35:33 INFO -
[task 2019-01-24T12:35:33.385Z] 12:35:33 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2019-01-24T12:35:33.385Z] 12:35:33 INFO - Crash address: 0x0
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - Process uptime: not available
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO -
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - Thread 0 (crashed)
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - 0 libxul.so + 0xd1a437
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - rax = 0x00007f289a99c7d4 rdx = 0x0000000000000000
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - rcx = 0x0000562aade1b980 rbx = 0x00007f28898443d0
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - rsi = 0x00007f28a70bb770 rdi = 0x00007f28a70ba540
[task 2019-01-24T12:35:33.386Z] 12:35:33 INFO - rbp = 0x00007ffe69424730 rsp = 0x00007ffe694246d0
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - r8 = 0x00007f28a70bb770 r9 = 0x00007f28a8119740
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - r10 = 0x0000000000000000 r11 = 0x0000000000000000
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - r12 = 0x00007ffe694246f8 r13 = 0x00007ffe694246e8
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - r14 = 0x00007ffe694246d0 r15 = 0x0000000000000000
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - rip = 0x00007f2895611437
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - Found by: given as instruction pointer in context
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - 1 libxul.so + 0x4626ef1
[task 2019-01-24T12:35:33.387Z] 12:35:33 INFO - rbp = 0x00007ffe69424750 rsp = 0x00007ffe69424740
[task 2019-01-24T12:35:33.388Z] 12:35:33 INFO - rip = 0x00007f2898f1def1
[task 2019-01-24T12:35:33.388Z] 12:35:33 INFO - Found by: previous frame's frame pointer
[task 2019-01-24T12:35:33.388Z] 12:35:33 INFO - 2 libxul.so + 0x11fb79f
[task 2019-01-24T12:35:33.388Z] 12:35:33 INFO - rbp = 0x00007ffe69424770 rsp = 0x00007ffe69424760
[task 2019-01-24T12:35:33.388Z] 12:35:33 INFO - rip = 0x00007f2895af279f
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - Found by: previous frame's frame pointer
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - 3 libxul.so + 0x46274a3
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - rbp = 0x00007ffe69424a50 rsp = 0x00007ffe69424780
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - rip = 0x00007f2898f1e4a3
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - Found by: previous frame's frame pointer
[task 2019-01-24T12:35:33.389Z] 12:35:33 INFO - 4 firefox-bin!content_process_main(mozilla::Bootstrap*, int, char**) [plugin-container.cpp:5e7f43df50482670ee86c203ec1e90ab1fbafd4d : 49 + 0x12]
[task 2019-01-24T12:35:33.390Z] 12:35:33 INFO - rbp = 0x00007ffe69424a90 rsp = 0x00007ffe69424a60
[task 2019-01-24T12:35:33.390Z] 12:35:33 INFO - rip = 0x0000562aaddcb9d8
[task 2019-01-24T12:35:33.390Z] 12:35:33 INFO - Found by: previous frame's frame pointer
[task 2019-01-24T12:35:33.390Z] 12:35:33 INFO - 5 firefox-bin!main [nsBrowserApp.cpp:5e7f43df50482670ee86c203ec1e90ab1fbafd4d : 265 + 0xb]
[task 2019-01-24T12:35:33.391Z] 12:35:33 INFO - rbx = 0x0000000000000000 rbp = 0x00007ffe69425ae0
[task 2019-01-24T12:35:33.391Z] 12:35:33 INFO - rsp = 0x00007ffe69424aa0 r14 = 0x0000000000000014
[task 2019-01-24T12:35:33.391Z] 12:35:33 INFO - r15 = 0x0000562aade1b3d8 rip = 0x0000562aaddcbc4e
[task 2019-01-24T12:35:33.391Z] 12:35:33 INFO - Found by: call frame info
[task 2019-01-24T12:35:33.391Z] 12:35:33 INFO - 6 libc-2.23.so + 0x20830
[task 2019-01-24T12:35:33.392Z] 12:35:33 INFO - rbx = 0x0000000000000000 rbp = 0x0000562aade07620
[task 2019-01-24T12:35:33.392Z] 12:35:33 INFO - rsp = 0x00007ffe69425af0 r12 = 0x0000562aaddcb848
[task 2019-01-24T12:35:33.392Z] 12:35:33 INFO - r13 = 0x00007ffe69425bc0 r14 = 0x0000000000000000
[task 2019-01-24T12:35:33.392Z] 12:35:33 INFO - r15 = 0x0000000000000000 rip = 0x00007f28a6d15830
[task 2019-01-24T12:35:33.393Z] 12:35:33 INFO - Found by: call frame info
[task 2019-01-24T12:35:33.393Z] 12:35:33 INFO - 7 firefox-bin!<name omitted> [UniquePtr.h:5e7f43df50482670ee86c203ec1e90ab1fbafd4d : 274 + 0x1]
[task 2019-01-24T12:35:33.393Z] 12:35:33 INFO - rsp = 0x00007ffe69425b10 rip = 0x0000562aaddcba19
[task 2019-01-24T12:35:33.394Z] 12:35:33 INFO - Found by: stack scanning
[task 2019-01-24T12:35:33.394Z] 12:35:33 INFO -
[task 2019-01-24T12:35:33.394Z] 12:35:33 INFO - Thread 1
Updated•6 years ago
|
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Earlier in the log:
[task 2019-01-24T12:35:26.478Z] 12:35:26 INFO - PID 3771 | [Child 5557: Main Thread]: E/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:367: PeerConnectionCtx is already gone. Ignoring...
[task 2019-01-24T12:35:26.480Z] 12:35:26 INFO - PID 3771 | [Child 5557: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:371: ~PeerConnectionImpl: PeerConnectionImpl destructor invoked for 18f9c995392bb2e7
[task 2019-01-24T12:35:26.481Z] 12:35:26 INFO - PID 3771 | [Child 3879, Main Thread] WARNING: NS_ENSURE_TRUE(domReturn) failed: file /builds/worker/workspace/build/src/dom/base/nsGlobalWindowOuter.cpp, line 7201
[task 2019-01-24T12:35:26.482Z] 12:35:26 INFO - PID 3771 | ++DOCSHELL 0x7fd6dbece000 == 1 [pid = 5632] [id = {a0279b15-3d60-4958-ad6f-8f7da6be02d8}]
[task 2019-01-24T12:35:26.560Z] 12:35:26 INFO - PID 3771 | ++DOMWINDOW == 1 (0x7fd6dbd13400) [pid = 5632] [serial = 1] [outer = (nil)]
[task 2019-01-24T12:35:26.610Z] 12:35:26 INFO - PID 3771 | ++DOMWINDOW == 2 (0x7fd6dbd1ac00) [pid = 5632] [serial = 2] [outer = 0x7fd6dbd13400]
[task 2019-01-24T12:35:26.631Z] 12:35:26 INFO - PID 3771 | [Child 5557, Main Thread] WARNING: Fonts still alive while shutting down gfxFontCache: 'mFonts.Count() == 0', file /builds/worker/workspace/build/src/gfx/thebes/gfxFont.cpp, line 214
[task 2019-01-24T12:35:26.634Z] 12:35:26 INFO - PID 3771 | Assertion failed at /builds/worker/workspace/build/src/gfx/cairo/cairo/src/cairo-hash.c:196: hash_table->live_entries == 0
[task 2019-01-24T12:35:26.638Z] 12:35:26 INFO - PID 3771 | WARNING: YOU ARE LEAKING THE WORLD (at least one JSRuntime and everything alive inside it, that is) AT JS_ShutDown TIME. FIX THIS!
[task 2019-01-24T12:35:26.639Z] 12:35:26 INFO - PID 3771 | Hit MOZ_CRASH(NSS_Shutdown failed) at /builds/worker/workspace/build/src/xpcom/build/XPCOMInit.cpp:907
[task 2019-01-24T12:35:26.641Z] 12:35:26 INFO - PID 3771 | #01: libxul.so + 0x4626ef1
[task 2019-01-24T12:35:26.642Z] 12:35:26 INFO -
[task 2019-01-24T12:35:26.642Z] 12:35:26 INFO - PID 3771 | #02: libxul.so + 0x11fb79f
[task 2019-01-24T12:35:26.643Z] 12:35:26 INFO -
[task 2019-01-24T12:35:26.643Z] 12:35:26 INFO - PID 3771 | #03: libxul.so + 0x46274a3
[task 2019-01-24T12:35:26.644Z] 12:35:26 INFO -
[task 2019-01-24T12:35:27.726Z] 12:35:27 INFO - PID 3771 | #04: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:50]
[task 2019-01-24T12:35:27.727Z] 12:35:27 INFO -
[task 2019-01-24T12:35:27.730Z] 12:35:27 INFO - PID 3771 | #05: main [browser/app/nsBrowserApp.cpp:265]
[task 2019-01-24T12:35:27.731Z] 12:35:27 INFO -
[task 2019-01-24T12:35:27.732Z] 12:35:27 INFO - PID 3771 | #06: libc.so.6 + 0x20830
[task 2019-01-24T12:35:27.732Z] 12:35:27 INFO -
[task 2019-01-24T12:35:27.733Z] 12:35:27 INFO - PID 3771 | #07: _start
[task 2019-01-24T12:35:27.734Z] 12:35:27 INFO -
[task 2019-01-24T12:35:27.734Z] 12:35:27 INFO - PID 3771 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpHjwaxE.mozrunner/runtests_leaks_859_tab_pid5697.log
Bug 1429514 is for the assertion but says it's not fatal.
The Linux x64 QR opt jobs are missing the symbols but https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=223873047&repo=mozilla-inbound&lineNumber=79396 is on OS X and has them:
14:34:36 INFO - TEST-START | /webrtc/RTCPeerConnection-removeTrack.https.html
14:34:36 INFO - PID 3403 | Timecard created 1548369246.357093
14:34:36 INFO - PID 3403 | Timestamp | Delta | Event | File | Function
14:34:36 INFO - PID 3403 | ======================================================================================================================
14:34:36 INFO - PID 3403 | 0.000019 | 0.000019 | Constructor Completed | PeerConnectionImpl.cpp:337 | PeerConnectionImpl
14:34:36 INFO - PID 3403 | 0.000959 | 0.000940 | Initializing PC Ctx | PeerConnectionImpl.cpp:457 | Initialize
14:34:36 INFO - PID 3403 | 0.029124 | 0.028165 | Create Offer | PeerConnectionImpl.cpp:1237 | CreateOffer
14:34:36 INFO - PID 3403 | 0.033085 | 0.003961 | Set Local Description | PeerConnectionImpl.cpp:1323 | SetLocalDescription
14:34:36 INFO - PID 3403 | 0.068909 | 0.035824 | Set Remote Description | PeerConnectionImpl.cpp:1425 | SetRemoteDescription
14:34:36 INFO - PID 3403 | 0.088094 | 0.019185 | Create Offer | PeerConnectionImpl.cpp:1237 | CreateOffer
14:34:36 INFO - PID 3403 | 0.090347 | 0.002253 | Set Local Description | PeerConnectionImpl.cpp:1323 | SetLocalDescription
14:34:36 INFO - PID 3403 | 0.118267 | 0.027920 | Set Remote Description | PeerConnectionImpl.cpp:1425 | SetRemoteDescription
14:34:36 INFO - PID 3403 | 0.131326 | 0.013059 | Ice gathering state: gathering | PeerConnectionImpl.cpp:2660 | IceGatheringStateChange
14:34:36 INFO - PID 3403 | 0.139931 | 0.008605 | Ice gathering state: complete | PeerConnectionImpl.cpp:2663 | IceGatheringStateChange
14:34:36 INFO - PID 3403 | 0.219660 | 0.079729 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 0.223314 | 0.003654 | Ice state: checking | PeerConnectionImpl.cpp:2615 | IceConnectionStateChange
14:34:36 INFO - PID 3403 | 0.226863 | 0.003549 | Ice state: connected | PeerConnectionImpl.cpp:2618 | IceConnectionStateChange
14:34:36 INFO - PID 3403 | 0.228994 | 0.002131 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 29.804059 | 29.575065 | Destructor Invoked | PeerConnectionImpl.cpp:346 | ~PeerConnectionImpl
14:34:36 INFO - PID 3403 | [Child 3451: Main Thread]: E/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:367: PeerConnectionCtx is already gone. Ignoring...
14:34:36 INFO - PID 3403 | [Child 3451: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:371: ~PeerConnectionImpl: PeerConnectionImpl destructor invoked for 8736b3a24792f984
14:34:36 INFO - PID 3403 | Timecard created 1548369246.376850
14:34:36 INFO - PID 3403 | Timestamp | Delta | Event | File | Function
14:34:36 INFO - PID 3403 | ======================================================================================================================
14:34:36 INFO - PID 3403 | 0.000025 | 0.000025 | Constructor Completed | PeerConnectionImpl.cpp:337 | PeerConnectionImpl
14:34:36 INFO - PID 3403 | 0.001093 | 0.001068 | Initializing PC Ctx | PeerConnectionImpl.cpp:457 | Initialize
14:34:36 INFO - PID 3403 | 0.019106 | 0.018013 | Set Remote Description | PeerConnectionImpl.cpp:1425 | SetRemoteDescription
14:34:36 INFO - PID 3403 | 0.036381 | 0.017275 | Create Answer | PeerConnectionImpl.cpp:1277 | CreateAnswer
14:34:36 INFO - PID 3403 | 0.042335 | 0.005954 | Set Local Description | PeerConnectionImpl.cpp:1323 | SetLocalDescription
14:34:36 INFO - PID 3403 | 0.079232 | 0.036897 | Set Remote Description | PeerConnectionImpl.cpp:1425 | SetRemoteDescription
14:34:36 INFO - PID 3403 | 0.086885 | 0.007653 | Create Answer | PeerConnectionImpl.cpp:1277 | CreateAnswer
14:34:36 INFO - PID 3403 | 0.093433 | 0.006548 | Set Local Description | PeerConnectionImpl.cpp:1323 | SetLocalDescription
14:34:36 INFO - PID 3403 | 0.116919 | 0.023486 | Ice gathering state: gathering | PeerConnectionImpl.cpp:2660 | IceGatheringStateChange
14:34:36 INFO - PID 3403 | 0.142485 | 0.025566 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 0.148653 | 0.006168 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 0.168630 | 0.019977 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 0.171493 | 0.002863 | Ice gathering state: complete | PeerConnectionImpl.cpp:2663 | IceGatheringStateChange
14:34:36 INFO - PID 3403 | 0.178068 | 0.006575 | Add Ice Candidate | PeerConnectionImpl.cpp:1595 | AddIceCandidate
14:34:36 INFO - PID 3403 | 0.201907 | 0.023839 | Ice state: checking | PeerConnectionImpl.cpp:2615 | IceConnectionStateChange
14:34:36 INFO - PID 3403 | 0.205648 | 0.003741 | Ice state: connected | PeerConnectionImpl.cpp:2618 | IceConnectionStateChange
14:34:36 INFO - PID 3403 | 29.785159 | 29.579511 | Destructor Invoked | PeerConnectionImpl.cpp:346 | ~PeerConnectionImpl
14:34:36 INFO - PID 3403 | [Child 3451: Main Thread]: E/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:367: PeerConnectionCtx is already gone. Ignoring...
14:34:36 INFO - PID 3403 | [Child 3451: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:371: ~PeerConnectionImpl: PeerConnectionImpl destructor invoked for f46569936f98c7ca
14:34:36 INFO - PID 3403 | [Child 3406, Main Thread] WARNING: NS_ENSURE_TRUE(domReturn) failed: file /builds/worker/workspace/build/src/dom/base/nsGlobalWindowOuter.cpp, line 7201
14:34:36 INFO - PID 3403 | ++DOCSHELL 0x114edd800 == 1 [pid = 3453] [id = {39ffc15a-9539-7345-8d51-32423d304b4f}]
14:34:36 INFO - PID 3403 | ++DOMWINDOW == 1 (0x11ee07000) [pid = 3453] [serial = 1] [outer = 0x0]
14:34:36 INFO - PID 3403 | ++DOMWINDOW == 2 (0x11ee0d000) [pid = 3453] [serial = 2] [outer = 0x11ee07000]
14:34:36 INFO - PID 3403 | [Child 3451, Main Thread] WARNING: Fonts still alive while shutting down gfxFontCache: 'mFonts.Count() == 0', file /builds/worker/workspace/build/src/gfx/thebes/gfxFont.cpp, line 214
14:34:36 INFO - PID 3403 | Assertion failed at /builds/worker/workspace/build/src/gfx/cairo/cairo/src/cairo-hash.c:196: hash_table->live_entries == 0
14:34:36 INFO - PID 3403 | WARNING: YOU ARE LEAKING THE WORLD (at least one JSRuntime and everything alive inside it, that is) AT JS_ShutDown TIME. FIX THIS!
14:34:36 INFO - PID 3403 | Hit MOZ_CRASH(NSS_Shutdown failed) at /builds/worker/workspace/build/src/xpcom/build/XPCOMInit.cpp:907
14:34:38 INFO - Closing window 81604378625
14:34:38 INFO - mozcrash ............
14:34:38 INFO - mozcrash Copy/paste: /Users/cltbld/tasks/task_1548366232/build/macosx64-minidump_stackwalk /var/folders/py/xx3mdtr97x9cpm214pnq0jcc00000w/T/tmptBSw55.mozrunner/minidumps/56A379E4-2328-4039-A636-A7CF6087DB40.dmp /Users/cltbld/tasks/task_1548366232/build/symbols
14:34:55 INFO - mozcrash Saved minidump as /Users/cltbld/tasks/task_1548366232/build/blobber_upload_dir/56A379E4-2328-4039-A636-A7CF6087DB40.dmp
14:34:55 INFO - mozcrash Saved app info as /Users/cltbld/tasks/task_1548366232/build/blobber_upload_dir/56A379E4-2328-4039-A636-A7CF6087DB40.extra
14:34:55 INFO - PROCESS-CRASH | /webrtc/RTCPeerConnection-removeTrack.https.html | application crashed [@ mozilla::ShutdownXPCOM(nsIServiceManager*)]
14:34:55 INFO - Crash dump filename: /var/folders/py/xx3mdtr97x9cpm214pnq0jcc00000w/T/tmptBSw55.mozrunner/minidumps/56A379E4-2328-4039-A636-A7CF6087DB40.dmp
14:34:55 INFO - Operating system: Mac OS X
14:34:55 INFO - 10.10.5 14F27
14:34:55 INFO - CPU: amd64
14:34:55 INFO - family 6 model 69 stepping 1
14:34:55 INFO - 4 CPUs
14:34:55 INFO -
14:34:55 INFO - GPU: UNKNOWN
14:34:55 INFO -
14:34:55 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
14:34:55 INFO - Crash address: 0x0
14:34:55 INFO - Process uptime: 153 seconds
14:34:55 INFO -
14:34:55 INFO - Thread 0 (crashed)
14:34:55 INFO - 0 XUL!mozilla::ShutdownXPCOM(nsIServiceManager*) [XPCOMInit.cpp:250c2923583de86eb9afd4e47ddc0a1ad242d5d4 : 907 + 0x0]
14:34:55 INFO - rax = 0x000000010b7aba98 rdx = 0x00007fff7c4921f8
14:34:55 INFO - rcx = 0x000000010dbd56b0 rbx = 0x0000000000000000
14:34:55 INFO - rsi = 0x0002230000022300 rdi = 0x0002220000022303
14:34:55 INFO - rbp = 0x00007fff5b835860 rsp = 0x00007fff5b8357f0
14:34:55 INFO - r8 = 0x00007fff5b8357a0 r9 = 0x00007fff7b7b1300
14:34:55 INFO - r10 = 0x00007fff8e0825d2 r11 = 0x00007fff8e082421
14:34:55 INFO - r12 = 0x00007fff5b8357f8 r13 = 0x000000010de9ddf0
14:34:55 INFO - r14 = 0x00007fff5b835810 r15 = 0x00007fff5b835808
14:34:55 INFO - rip = 0x000000010482751c
14:34:55 INFO - Found by: given as instruction pointer in context
14:34:55 INFO - 1 XUL!XRE_TermEmbedding() [nsEmbedFunctions.cpp:250c2923583de86eb9afd4e47ddc0a1ad242d5d4 : 213 + 0x7]
14:34:55 INFO - rbp = 0x00007fff5b835880 rsp = 0x00007fff5b835870
14:34:55 INFO - rip = 0x0000000109d1dfc8
14:34:55 INFO - Found by: previous frame's frame pointer
14:34:55 INFO - 2 XUL!mozilla::ipc::ScopedXREEmbed::Stop() [ScopedXREEmbed.cpp:250c2923583de86eb9afd4e47ddc0a1ad242d5d4 : 90 + 0x5]
14:34:55 INFO - rbp = 0x00007fff5b8358a0 rsp = 0x00007fff5b835890
14:34:55 INFO - rip = 0x0000000104ef1183
14:34:55 INFO - Found by: previous frame's frame pointer
14:34:55 INFO - 3 XUL!XRE_InitChildProcess(int, char**, XREChildData const*) [nsEmbedFunctions.cpp:250c2923583de86eb9afd4e47ddc0a1ad242d5d4 : 750 + 0x9]
14:34:55 INFO - rbp = 0x00007fff5b835bd0 rsp = 0x00007fff5b8358b0
14:34:55 INFO - rip = 0x0000000109d1ec4d
14:34:55 INFO - Found by: previous frame's frame pointer
14:34:55 INFO - 4 plugin-container!main [plugin-container.cpp:250c2923583de86eb9afd4e47ddc0a1ad242d5d4 : 49 + 0x13]
14:34:55 INFO - rbp = 0x00007fff5b835c10 rsp = 0x00007fff5b835be0
14:34:55 INFO - rip = 0x00000001043c9f07
14:34:55 INFO - Found by: previous frame's frame pointer
14:34:55 INFO - 5 libdyld.dylib + 0x35c9
14:34:55 INFO - rbp = 0x00007fff5b835c20 rsp = 0x00007fff5b835c20
14:34:55 INFO - rip = 0x00007fff8e0825c9
14:34:55 INFO - Found by: previous frame's frame pointer
| Comment hidden (Intermittent Failures Robot) |
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 5•6 years ago
|
||
I've figured out what is going on here, I think. Patch coming soon.
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 6•6 years ago
|
||
| Assignee | ||
Comment 7•6 years ago
|
||
| Assignee | ||
Comment 8•6 years ago
|
||
Retriggers look good.
Comment 10•6 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Comment 12•6 years ago
|
||
Please nominate this for Beta approval when you get a chance.
| Assignee | ||
Comment 13•6 years ago
|
||
Comment on attachment 9042519 [details]
Bug 1522535: Break a cycle triggered by a recent web-platform-test merge.
Beta/Release Uplift Approval Request
Feature/Bug causing the regression
User impact if declined
Relatively frequent intermittent failures in web-platform-tests.
Is this code covered by automated tests?
Yes
Has the fix been verified in Nightly?
Yes
Needs manual test from QE?
No
If yes, steps to reproduce
List of other uplifts needed
None
Risk to taking this patch
Low
Why is the change risky/not risky? (and alternatives if risky)
Just clearing a RefPtr to break a cycle.
String changes made/needed
None
Comment 14•6 years ago
|
||
Comment on attachment 9042519 [details]
Bug 1522535: Break a cycle triggered by a recent web-platform-test merge.
Fix for WPT, OK to uplift to beta.
Comment 15•6 years ago
|
||
| bugherder uplift | ||
| Comment hidden (Intermittent Failures Robot) |
Description
•