Bug 1522535: Break a cycle triggered by a recent web-platform-test merge. r=jib

Differential Revision: https://phabricator.services.mozilla.com/D19171